added covariance and regularization

--- a/probabilistic_gaussian_generative_classifier.ipynb
+++ b/probabilistic_gaussian_generative_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "7406b273-425f-427c-b1d2-68d2244302cb",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6306ff5e-d25c-46c2-8ae8-b2929e7d2618",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "505324e5-84bb-4c0c-a42d-b146cd9fd6f7",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "((1797, 64), (1797,))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "b886480f-6037-4997-855d-e9188aebf778",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "43300091-ca09-4865-95b8-96f888a2fbdb",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "76bab027-8dc0-428f-9d96-5786acd90b62",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "086914a5-5fc7-4d02-ad57-bcf7e27c9c0f",
    "metadata": {},
    "outputs": [],
@@ -126,21 +126,49 @@
     "    def __init__(self,x_train,y_train):\n",
     "        self.x_train = x_train\n",
     "        self.y_train = y_train\n",
+    "        self.d = self.x_train.shape[1]\n",
     "        self.pi = [] # Class priors\n",
     "        self.mu = [] # Class means\n",
-    "    def estimate_class_priors(self):\n",
+    "        self.sigma = np.zeros((d, d)) # Covariance matrix\n",
+    "        self.sigma_reg = np.zeros((d, d)) # Regularized covariance matrix\n",
+    "    def _estimate_class_priors(self):\n",
     "        n = len(self.y_train)\n",
     "        for k in range(10):\n",
     "            pi_k = self.y_train.count(k)/n\n",
     "            self.pi.append(pi_k)\n",
     "        return self.pi\n",
-    "    def estimate_class_means(self):\n",
+    "    def _estimate_class_means(self):\n",
     "        for k in range(10):\n",
     "            x_class = self.x_train[self.y_train == k] # Get all samples that are equal to k\n",
     "            mu_k = x_class.mean(axis=0) # return a vector of size 64x1\n",
     "            self.mu.append(mu_k)\n",
-    "        "
+    "    def _estimate_covariance_matrix(self):\n",
+    "        self.sigma = np.zeros((d, d)) \n",
+    "        # Iterate over training samples\n",
+    "        for i in range(len(self.y_train)):\n",
+    "            # compute the difference\n",
+    "            diff = self.x_train[i] - self.mu[self.y_train[i]]\n",
+    "            # create a diagonal matrix\n",
+    "            self.sigma += np.outer(diff,diff)\n",
+    "        self.sigma /= len(self.y_train)\n",
+    "    def regularize(self,reg_term=0):\n",
+    "        self.sigma_reg = self.sigma + reg_term * np.eye(d)\n",
+    "    def fit(self):\n",
+    "        self._estimate_class_priors()\n",
+    "        self._estimate_class_means()\n",
+    "        self._estimate_covariance_matrix()\n",
+    "        \n",
+    "    def predict(self):\n",
+    "        scores = np.log(pi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c26ef592-d5cb-4bd9-baa8-5dcb24615d00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
