--- a/Part B/notebook.ipynb
+++ b/Part B/notebook.ipynb
@@ -509,6 +509,26 @@
    "execution_count": 9
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Independence assumption\n",
+    "Naive Bayes classifier assumes the complete independence of each feature from the other. This assumption succeeds between some features such as\n",
+    "- work class - relative-country\n",
+    "- work class - education\n",
+    "- marital status - education\n",
+    "- relationship - education\n",
+    "... due to their low correlation.\n",
+    "But it fails between others like\n",
+    "- work class - education\n",
+    "- marital-status - relationship\n",
+    "- occupation - work class\n",
+    "- race - native country\n",
+    "... because of the high correlation value between them"
+   ],
+   "id": "41693208dd09218e"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-12-06T11:06:00.714181Z",
@@ -516,13 +536,13 @@
     }
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": 10,
    "source": [
     "from utils import split_x_and_y\n",
     "x, y = split_x_and_y(df)"
    ],
-   "id": "3e062adea8897287",
-   "outputs": [],
-   "execution_count": 10
+   "id": "3e062adea8897287"
   },
   {
    "metadata": {
@@ -532,8 +552,6 @@
     }
    },
    "cell_type": "code",
-   "source": "x.head()",
-   "id": "cb68426546f8f983",
    "outputs": [
     {
      "data": {
@@ -647,7 +665,9 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 11,
+   "source": "x.head()",
+   "id": "cb68426546f8f983"
   },
   {
    "metadata": {
@@ -657,8 +677,6 @@
     }
    },
    "cell_type": "code",
-   "source": "y.head()",
-   "id": "3e0cf1ac04c90c27",
    "outputs": [
     {
      "data": {
@@ -676,7 +694,9 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 12,
+   "source": "y.head()",
+   "id": "3e0cf1ac04c90c27"
   },
   {
    "metadata": {
@@ -686,10 +706,10 @@
     }
    },
    "cell_type": "code",
-   "source": "unique_values = x.nunique()",
-   "id": "fbaf7adf1a110a40",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 13,
+   "source": "unique_values = x.nunique()",
+   "id": "fbaf7adf1a110a40"
   },
   {
    "metadata": {
@@ -699,13 +719,13 @@
     }
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": 14,
    "source": [
     "from utils import split_data\n",
     "x_train, x_val, x_test, y_train, y_val, y_test = split_data(x, y, 0.7, 0.15, 0.15)"
    ],
-   "id": "c2c04bd93feb49ef",
-   "outputs": [],
-   "execution_count": 14
+   "id": "c2c04bd93feb49ef"
   },
   {
    "metadata": {
@@ -715,11 +735,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "print(x_train.shape, x_val.shape, x_test.shape)\n",
-    "print(y_train.shape, y_val.shape, y_test.shape)"
-   ],
-   "id": "e2aeafc424d3a8b8",
    "outputs": [
     {
      "name": "stdout",
@@ -730,7 +745,12 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 15,
+   "source": [
+    "print(x_train.shape, x_val.shape, x_test.shape)\n",
+    "print(y_train.shape, y_val.shape, y_test.shape)"
+   ],
+   "id": "e2aeafc424d3a8b8"
   },
   {
    "metadata": {
@@ -740,6 +760,8 @@
     }
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": 16,
    "source": [
     "from NaiveBayes import NaiveBayes\n",
     "model = NaiveBayes(x_train, y_train, unique_values)\n",
@@ -748,9 +770,7 @@
     "recalls = []\n",
     "f1s = []"
    ],
-   "id": "72fa3bbafdfc406f",
-   "outputs": [],
-   "execution_count": 16
+   "id": "72fa3bbafdfc406f"
   },
   {
    "metadata": {
@@ -760,14 +780,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 0.1)\n",
-    "accs.append(acc)\n",
-    "presicions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "f1s.append(f1)"
-   ],
-   "id": "6aae2bd331518023",
    "outputs": [
     {
      "name": "stdout",
@@ -790,7 +802,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 17
+   "execution_count": 17,
+   "source": [
+    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 0.1)\n",
+    "accs.append(acc)\n",
+    "presicions.append(precision)\n",
+    "recalls.append(recall)\n",
+    "f1s.append(f1)"
+   ],
+   "id": "6aae2bd331518023"
   },
   {
    "metadata": {
@@ -800,14 +820,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 0.5)\n",
-    "accs.append(acc)\n",
-    "presicions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "f1s.append(f1)"
-   ],
-   "id": "ca2ae48e4bc41bcb",
    "outputs": [
     {
      "name": "stdout",
@@ -830,7 +842,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 18
+   "execution_count": 18,
+   "source": [
+    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 0.5)\n",
+    "accs.append(acc)\n",
+    "presicions.append(precision)\n",
+    "recalls.append(recall)\n",
+    "f1s.append(f1)"
+   ],
+   "id": "ca2ae48e4bc41bcb"
   },
   {
    "metadata": {
@@ -840,14 +860,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 1)\n",
-    "accs.append(acc)\n",
-    "presicions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "f1s.append(f1)"
-   ],
-   "id": "d06a7997d49675b3",
    "outputs": [
     {
      "name": "stdout",
@@ -870,7 +882,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 19
+   "execution_count": 19,
+   "source": [
+    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 1)\n",
+    "accs.append(acc)\n",
+    "presicions.append(precision)\n",
+    "recalls.append(recall)\n",
+    "f1s.append(f1)"
+   ],
+   "id": "d06a7997d49675b3"
   },
   {
    "metadata": {
@@ -880,14 +900,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 2)\n",
-    "accs.append(acc)\n",
-    "presicions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "f1s.append(f1)"
-   ],
-   "id": "54535f0ccc1ffce7",
    "outputs": [
     {
      "name": "stdout",
@@ -910,7 +922,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 20
+   "execution_count": 20,
+   "source": [
+    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 2)\n",
+    "accs.append(acc)\n",
+    "presicions.append(precision)\n",
+    "recalls.append(recall)\n",
+    "f1s.append(f1)"
+   ],
+   "id": "54535f0ccc1ffce7"
   },
   {
    "metadata": {
@@ -920,14 +940,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 5)\n",
-    "accs.append(acc)\n",
-    "presicions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "f1s.append(f1)"
-   ],
-   "id": "ed29a132c671bfd2",
    "outputs": [
     {
      "name": "stdout",
@@ -950,7 +962,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 21
+   "execution_count": 21,
+   "source": [
+    "acc, precision, recall, f1 = model.fit_and_predict(x_val, y_val, 5)\n",
+    "accs.append(acc)\n",
+    "presicions.append(precision)\n",
+    "recalls.append(recall)\n",
+    "f1s.append(f1)"
+   ],
+   "id": "ed29a132c671bfd2"
   },
   {
    "metadata": {
@@ -960,11 +980,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "from utils import compare_alphas\n",
-    "compare_alphas(accs, presicions, recalls, f1s)"
-   ],
-   "id": "a59d1cb949d2d75b",
    "outputs": [
     {
      "name": "stdout",
@@ -1011,7 +1026,12 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 22
+   "execution_count": 22,
+   "source": [
+    "from utils import compare_alphas\n",
+    "compare_alphas(accs, presicions, recalls, f1s)"
+   ],
+   "id": "a59d1cb949d2d75b"
   },
   {
    "metadata": {
@@ -1021,8 +1041,6 @@
     }
    },
    "cell_type": "code",
-   "source": "model.fit_and_predict(x_test, y_test, 0.5)",
-   "id": "5002dd3eea3d3e67",
    "outputs": [
     {
      "name": "stdout",
@@ -1058,7 +1076,9 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 23,
+   "source": "model.fit_and_predict(x_test, y_test, 0.5)",
+   "id": "5002dd3eea3d3e67"
   },
   {
    "metadata": {
@@ -1068,8 +1088,6 @@
     }
    },
    "cell_type": "code",
-   "source": "model.analyze_likelihoods(label_mappings)",
-   "id": "4e095bb82caef68c",
    "outputs": [
     {
      "name": "stdout",
@@ -1272,7 +1290,9 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 24
+   "execution_count": 24,
+   "source": "model.analyze_likelihoods(label_mappings)",
+   "id": "4e095bb82caef68c"
   },
   {
    "metadata": {
@@ -1282,8 +1302,6 @@
     }
    },
    "cell_type": "code",
-   "source": "model.plot_probabilities()",
-   "id": "b7856e5eb56c3ec0",
    "outputs": [
     {
      "data": {
@@ -1305,7 +1323,9 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 25
+   "execution_count": 25,
+   "source": "model.plot_probabilities()",
+   "id": "b7856e5eb56c3ec0"
   },
   {
    "metadata": {
